--- a/app/src/main/res/layout/fragment_search_artist.xml
+++ b/app/src/main/res/layout/fragment_search_artist.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/search_artist_hint_edittext"
+        android:imeOptions="actionDone"
         android:inputType="text"
         android:singleLine="true" />
 
