--- a/app/src/main/res/layout/activity_search_artist.xml
+++ b/app/src/main/res/layout/activity_search_artist.xml
@@ -1,5 +1,8 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_artist"
     android:name="com.example.android.spotifystreamer.SearchArtistActivityFragment"
-    tools:layout="@layout/fragment_search_artist" android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.example.android.spotifystreamer.SearchArtistActivityFragment"
+    tools:layout="@layout/fragment_search_artist" />
