--- a/app/src/main/res/layout/track_player.xml
+++ b/app/src/main/res/layout/track_player.xml
@@ -24,10 +24,11 @@
 
     <ImageView
         android:id="@+id/album_artwork_imageview"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
         android:layout_gravity="center"
         android:layout_weight="1"
+
         android:src="@mipmap/ic_launcher" />
 
     <TextView
