--- a/app/src/main/res/layout/track_player.xml
+++ b/app/src/main/res/layout/track_player.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/track_player_linearlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/background_light"
@@ -11,24 +12,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Artist Name"
-        android:textSize="20sp" />
+        android:text="@string/placeholder_artist"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:textSize="16sp"
+        android:layout_marginBottom="8dp"/>
 
     <TextView
         android:id="@+id/album_name_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Album Name"
-        android:textSize="20sp" />
+        android:text="@string/placeholder_album"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:textSize="16sp"
+        android:layout_marginBottom="8dp"/>
 
     <ImageView
         android:id="@+id/album_artwork_imageview"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center"
         android:layout_weight="1"
-
+        android:layout_marginBottom="8dp"
         android:src="@mipmap/ic_launcher" />
 
     <TextView
@@ -36,8 +41,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Track Name"
-        android:textSize="16sp" />
+        android:text="@string/placeholder_track"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:textSize="16sp"
+        android:layout_marginBottom="8dp"/>
 
     <SeekBar
         android:id="@+id/duration_seekbar"
@@ -54,16 +61,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_marginLeft="16dp"
-            android:text="0:00" />
+            android:layout_marginStart="16dp"
+            android:text="@string/placeholder_elapsed_time"
+            android:textAppearance="?android:textAppearanceSmall" />
 
         <TextView
             android:id="@+id/duration_end_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
+            android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:text="0:30" />
+            android:text="@string/placeholder_duration"
+            android:textAppearance="?android:textAppearanceSmall" />
     </RelativeLayout>
 
     <LinearLayout
