--- a/app/src/main/res/layout-land/track_player.xml
+++ b/app/src/main/res/layout-land/track_player.xml
@@ -4,124 +4,116 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/background_light"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:padding="16dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+    <ImageView
+        android:id="@+id/album_artwork_imageview"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
         android:layout_weight="1"
-        android:orientation="horizontal">
+        android:src="@mipmap/ic_launcher" />
 
-        <ImageView
-            android:id="@+id/album_artwork_imageview"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/artist_name_textview"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:src="@mipmap/ic_launcher" />
+            android:gravity="center"
+            android:text="@string/placeholder_artist"
+            android:textAppearance="?android:textAppearanceSmall"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/album_name_textview"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/placeholder_album"
+            android:textAppearance="?android:textAppearanceSmall"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/track_name_textview"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/placeholder_track"
+            android:textAppearance="?android:textAppearanceSmall"
+            android:textSize="16sp" />
+
+        <SeekBar
+            android:id="@+id/duration_seekbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp">
+
+            <TextView
+                android:id="@+id/duration_start_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
+                android:text="@string/placeholder_elapsed_time"
+                android:textAppearance="?android:textAppearanceSmall" />
+
+            <TextView
+                android:id="@+id/duration_end_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:text="@string/placeholder_duration"
+                android:textAppearance="?android:textAppearanceSmall" />
+        </RelativeLayout>
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/artist_name_textview"
+            <ImageButton
+                android:id="@+id/previous_imagebutton"
                 android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/placeholder_artist"
-                android:textAppearance="?android:textAppearanceSmall"
-                android:textSize="16sp" />
+                android:layout_height="wrap_content"
+                android:src="@android:drawable/ic_media_previous" />
 
-            <TextView
-                android:id="@+id/album_name_textview"
+            <ImageButton
+                android:id="@+id/play_pause_imagebutton"
                 android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/placeholder_album"
-                android:textAppearance="?android:textAppearanceSmall"
-                android:textSize="16sp" />
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:src="@android:drawable/ic_media_play" />
 
-            <TextView
-                android:id="@+id/track_name_textview"
+            <ImageButton
+                android:id="@+id/next_imagebutton"
                 android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="@string/placeholder_track"
-                android:textAppearance="?android:textAppearanceSmall"
-                android:textSize="16sp" />
-
-            <SeekBar
-                android:id="@+id/duration_seekbar"
-                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center" />
+                android:src="@android:drawable/ic_media_next" />
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp">
-
-                <TextView
-                    android:id="@+id/duration_start_textview"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginStart="16dp"
-                    android:text="@string/placeholder_elapsed_time"
-                    android:textAppearance="?android:textAppearanceSmall" />
-
-                <TextView
-                    android:id="@+id/duration_end_textview"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginRight="16dp"
-                    android:text="@string/placeholder_duration"
-                    android:textAppearance="?android:textAppearanceSmall" />
-            </RelativeLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <ImageButton
-                    android:id="@+id/previous_imagebutton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@android:drawable/ic_media_previous" />
-
-                <ImageButton
-                    android:id="@+id/play_pause_imagebutton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="24dp"
-                    android:layout_marginRight="24dp"
-                    android:src="@android:drawable/ic_media_play" />
-
-                <ImageButton
-                    android:id="@+id/next_imagebutton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@android:drawable/ic_media_next" />
-
-            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-
 </LinearLayout>
